# agentic-solution-architect

./: .env.example  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  alembic.ini  config.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/dependencies/: __init__.py
backend/app/api/routes/: __init__.py  projects.py
backend/app/database/: session.py
backend/app/database/migrations/: env.py  script.py.mako
backend/app/database/migrations/versions/: 222282d5a65a_create_projects_table.py  46042f26b666_create_project_table.py  7b1cf6fca5c2_initial.py  9dab418ee283_create_project_table.py  README  a337deaa0ad0_initial.py  fdbd68d0a4ed_initial.py
backend/app/db/: __init__.py  session.py
backend/app/models/: project.py
backend/app/repositories/: project_repository.py
backend/app/schemas/: project.py
backend/app/services/: project_service.py
backend/tests/: test_app.py
docs/: api.md  architecture.md  database.md  deployment.md  roadmap.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
