[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-solution-architect"
version = "0.1.0"
description = "Multi-agent AI solution architect platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0.35,<2.1",
  "alembic>=1.13,<2.0",
  "pydantic>=2.7,<3.0",
  "langgraph>=0.2,<1.0",
  "langchain>=0.3,<1.0",
  "python-dotenv>=1.0,<2.0",
  "psycopg2-binary>=2.9,<3.0",
  "python-jose[cryptography]>=3.0,<4.0",
]
